wip: create jwt authentication for users

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ DATABASE_HOST=your_host
 DATABASE_PORT=database_port
 DATABASE_USERNAME=data_base_username
 DATABASE_PASSWORD=data_base_password
+
+TOKEN_SECRET=token_secret
+TOKEN_EXPIRES_IN=token_expiration_date
